--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PROJECT ONE BY CODINGX</title>
+    <title>Advance a4arif dev v3 web</title>
     <!-- /* font-awesome, bx-sldier link here */ -->
     <link rel="stylesheet" href="./assets/css/all.min.css">
     <link rel="stylesheet" href="./assets/css/fontawesome.min.css">
